[project]
name = "llm-gateway-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-litellm>=0.7.0",
    "langchain-openai>=1.3.3",
    "litellm>=1.91.0",
    "python-dotenv>=1.2.2",
]
